# omi-assist

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
backend/: Cargo.toml  wrangler.toml
backend/src/: api_ext.rs  config.rs  context.rs  lib.rs  not_found.rs  prelude.rs  route.rs  telegram.rs
backend/src/auth/: mod.rs  user.rs
backend/src/db/: action.rs  destination.rs  mod.rs  user.rs
backend/src/handlers/: action.rs  admin.rs  auth.rs  info.rs  mod.rs  omi.rs  telegram.rs
backend/src/helpers/: cloudflare.rs  mod.rs  web_sys.rs
backend/src/kv/: auth.rs
db/migrations/: 0001_init.sql  0002_telegram-actions.sql  0003_telegram-destinations-name.sql  0004_telegram-actions-add.sql  0005_telegram-index.sql  0006_telegram-user-name.sql
frontend/: Cargo.toml  index.html
frontend/src/: api_ext.rs  auth.rs  config.rs  error.rs  lib.rs  locale.rs  prelude.rs  route.rs
frontend/src/atoms/: buttons.rs  checkbox.rs  dropdown.rs  label.rs  mod.rs  modal.rs  text_area.rs  text_input.rs
frontend/src/atoms/dynamic_svg/: checkbox.rs  close_x.rs  eye.rs  mod.rs  more_arrow.rs
frontend/src/locale/atoms/: en.ftl
frontend/src/locale/dashboard/: en.ftl
frontend/src/locale/error/: en.ftl
frontend/src/locale/landing/: en.ftl  he.ftl
frontend/src/page/: dashboard.rs  header.rs  landing.rs  mod.rs  not_found.rs  privacy_policy.rs  terms_of_service.rs
frontend/src/page/dashboard/: actions.rs  destinations.rs  sidebar.rs
frontend/src/page/dashboard/actions/: add_modal.rs  list_actions.rs
frontend/src/page/dashboard/destinations/: list_destinations.rs
frontend/src/page/landing/: auth.rs  welcome.rs
frontend/src/page/landing/auth/: register_complete.rs  register_start.rs  signin.rs
frontend/src/theme/: misc.rs  responsive.rs  stylesheet.rs  typography.rs  z_index.rs
frontend/src/theme/color/: aliases.rs  mod.rs  raw.rs
frontend/src/util/: mixins.rs  mod.rs  signal.rs
media/archive/: logo.psd
shared/: Cargo.toml
shared/src/: api.rs  auth.rs  lib.rs  logger.rs  user.rs
shared/src/api/: action.rs  admin.rs  auth.rs  info.rs  omi.rs  telegram.rs
shared/src/backend/: mod.rs  result.rs  route.rs
shared/src/backend/worker/: convert.rs
shared/src/frontend/: route.rs
