[package]
name = "frontend"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
debug = []
dev = ["awsm_web/unwrap_verbose"]

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]
######## Project dependencies ########
shared = {path = "../shared", features = ["frontend"]}

######## General workspace dependencies ########
serde = {workspace = true} 
serde_json = {workspace = true} 
anyhow = {workspace = true} 
futures = {workspace = true} 
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
dominator = {workspace = true}
futures-signals = {workspace = true}
cfg-if = {workspace = true}
dominator_helpers = {workspace = true}
gloo-events = {workspace = true}
gloo-timers = {workspace = true}
reqwest = {workspace = true}
uuid = {workspace = true}
fluent = {workspace = true}
unic-langid = { workspace = true }
intl-memoizer = { workspace = true } 
base64 = {workspace = true} 
sha2 = {workspace = true} 
getrandom = {workspace = true} 
rand = {workspace = true} 
async-trait = {workspace = true} 
awsm_web = {workspace = true} 
futures-timer = {workspace = true} 
tracing = { workspace = true}

######## Proprietary dependencies ########

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Window",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement"
]

[lib]
crate-type = ["cdylib", "rlib"]